# scratch-a-pixel

./: .gitignore  CMakeLists.txt  README.md  bokeh.cpp  circle.ppm  cow.h  drand48.h  geometry.cpp  geometry.h  glorthoprojmatrix.cpp  glprojmatrix.cpp  heart.ppm  hexagon.ppm  inversetransform.cpp  mcbeth.cpp  mcimportance.cpp  mcintegration.cpp  mcquasi.cpp  mcrandom.cpp  mcsim.cpp  perspproj.cpp  pinhole.cpp  projmatrix.cpp  raster2d_triangle.cpp  raster3d.cpp  raster3d_triangle.cpp  raytracer.cpp  readwrite.cpp  readwrite_img.cpp  sampling_dist.cpp  star.ppm  vertexdata.h
data/: backdrop.geo  backdrop1.geo  cylinder.geo  glasses.geo  hexagon_small.ppm  pen.geo  plane.geo  winnie.ppm
src/img/: bokeh.cpp  mcbeth.cpp  read_write.cpp  readwrite.cpp
src/include/: acceleration.h  cow.h  generator.h  geometry.h  geometry_utils.h  hair_data.h  images.h  implicit.h  lights.h  loader.h  objects.h  teapot_data.h  utils.h  vertexdata.h
src/mc/: importance.cpp  integration.cpp  inverse_transform.cpp  inversetransform.cpp  quasi.cpp  random.cpp  sampling_dist.cpp  samplingdist.cpp  sim.cpp
src/noise/: perlin.cpp  value.cpp
src/raster/: 2d_triangle.cpp  3d_mesh.cpp  3d_mesh_loader.cpp  3d_triangle.cpp  geometry.cpp  gl_ortho_proj_matrix.cpp  gl_proj_matrix.cpp  glorthoprojmatrix.cpp  glprojmatrix.cpp  persp_proj.cpp  perspproj.cpp  pinhole.cpp  proj_matrix.cpp  projmatrix.cpp  raster2d_triangle.cpp  raster3d.cpp  raster3d_loader.cpp  raster3d_triangle.cpp
src/ray/: 2d_implicit.cpp  3d_mesh.cpp  3d_transform.cpp  acceleration.cpp  basic_tracer.cpp  basictracer.cpp  bezier_teapot.cpp  box.cpp  camera_rays.cpp  camerarays.cpp  distance_fields.cpp  indirect_diffuse.cpp  indirect_diffuse_shading.cpp  phong.cpp  phong_shading.cpp  raybox.cpp  simple_shading.cpp  simple_shapes.cpp  simpleshapes.cpp  skycolor.cpp  triangle.cpp  whitted.cpp
